2003-12-29  Mark Kettenis  <kettenis@gnu.org>

	* config/sparc/nm-sol2.h [NEW_PROC_API]
	(TARGET_HAS_HARDWARE_WAITCHPOINTS): Define.
	(TARGET_CAN_USE_HARDWARE_WATCHPOINT): Define to 1.
	(TARGET_REGION_SIZE_OK_FOR_HW_WATCHPOINT): Define to 1.
	(HAVE_CONTINUABLE_WATCHPOINT): Define to 1.
	(procfs_stopped_by_watchpoint): New prototype.
	(STOPPED_BY_WATCHPOINT): New define.
	(procfs_set_watchpoint): New prototype.
	(target_insert_watchpoint, target_remove_watchpoint): Define using
	procfs_set_watchpoint.

2003-12-28  Mark Kettenis  <kettenis@gnu.org>

	* sparcnbsd-tdep.c: Include "frame.h", "frame-unwind.h",
	"symtab.h", "trad-frame.h" and "gdb_assert.h".
	(sparc32nbsd_sigtramp_start, sparc32nbsd_sigtramp_end): New
	variables.
	(sparc32nbsd_pc_in_sigtramp, sparc32nbsd_sigcontext_frame_cache)
	(sparc32nbsd_sigcontext_frame_this_id)
	(sparc32nbsd_sigcontext_frame_prev_register): New functions.
	(sparc32nbsd_sigcontext_frame_unwind): New variable.
	(sparc32nbsd_sigtramp_frame_sniffer): New function.
	(sparc32nbsd_init_abi): Set pc_in_sigtramp to
	sparc32nbsd_pc_in_sigtramp, and append
	sparc32nbsd_sigtramp_frame_sniffer.
	(sparc32nbsd_elf_init_abi): Don't set pc_in_sigtramp here.

2003-12-27  Mark Kettenis  <kettenis@gnu.org>

	* sparc64nbsd-nat.c (sparc64nbsd_gregset_supplies_p)
	(sparc64nbsd_fpregset_supplies_p): New functions.
	(_initialize_sparcnbsd_nat): Initialize sparc_gregset_supplies_p
	and sparc_fpregset_supplies_p.
	* config/sparc/nbsd64.mh (NATDEPFILES): Remove sparc64-nat.o.

2003-12-27  Mark Kettenis  <kettenis@gnu.org>

	Merge from mainline:

	2003-10-31  Jim Blandy  <jimb@redhat.com>

	* elfread.c (elf_symtab_read): Allocate correct number of tail
	elements to sectinfo structure.  (Fix from Woody LaRue.)

2003-12-27  Mark Kettenis  <kettenis@gnu.org>

	* config/sparc/nbsd64.mh (NATDEPFILES): Add sparc64-nat.o.

	* Makefile.in (sparc64fbsd-tdep.o): Update dependencies.

	* sparc64-tdep.h (sparc64nbsd_gregset): Add extern declaration.