@@ -1,5 +1,11 @@
 2003-12-29  Mark Kettenis  <kettenis@gnu.org>
 
+	* sparc-sol2-tdep.c (sparc_sol2_pc_in_sigtramp): Recognize
+	ucbvechandler.
+	(sparc32_sol2_sigtramp_frame_cache): Call sparc_frame_cache
+	instead of sparc32_frame_cache.  Use the unwound stack pointer to
+	find `in' and `local' registers.
+
 	* config/sparc/nm-sol2.h [NEW_PROC_API]
 	(TARGET_HAS_HARDWARE_WAITCHPOINTS): Define.
 	(TARGET_CAN_USE_HARDWARE_WATCHPOINT): Define to 1.
